--- a/client/src/styles/slide.css
+++ b/client/src/styles/slide.css
@@ -176,3 +176,41 @@
     margin: 0;
     margin-right: 40px;
 }
+
+@media (max-width: 915px) {
+    #new-release {
+        width: 100vw;
+        height: 55vh;
+    }
+
+    .release-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .release-button {
+        width: 25px;
+        background: rgba(255, 255, 255, 0.4) !important;
+    }
+
+    .release-button img {
+        width: 22px;
+    }
+
+    .new-release-text {
+        left: 35px;
+        top: 20px;
+    }
+
+    .new-release-text h3 {
+        font-size: 1.7rem;
+        cursor: pointer;
+        margin: 0;
+        margin-right: 0px;
+    }
+
+    .text-2 {
+        display: none;
+    }
+}
