--- a/client/src/styles/alert.css
+++ b/client/src/styles/alert.css
@@ -39,3 +39,12 @@
 .alert-box button:hover {
     background: rgba(0, 0, 0, 0.05);
 }
+
+@media (max-width: 915px) {
+    .alert-box {
+        width: 90%;
+        background: white;
+        padding: 25px 0px 33px;
+        text-align: center;
+    }
+}
