--- a/client/src/styles/headerFooter.css
+++ b/client/src/styles/headerFooter.css
@@ -270,6 +270,18 @@ nav h3 {
         margin-right: 0px;
     }
 
+    #navbar ul {
+        padding: 0;
+    }
+
+    #header li {
+        margin: 6px;
+    }
+
+    #cart-num-link {
+        display: none;
+    }
+
     li a {
         font-size: 1.2rem;
     }
