--- a/client/src/styles/shopProducts.css
+++ b/client/src/styles/shopProducts.css
@@ -127,3 +127,22 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media only screen and (max-width: 915px) {
+    .productsContainer {
+        grid-template-columns: 1fr;
+    }
+
+    .categories {
+        margin-right: 0;
+    }
+
+    .categoriesh4>h4 {
+        margin: 0 !important;
+        font-size: 1.2rem !important;
+    }
+
+    .categoriesh4>h4:nth-child(4) {
+        width: 100px;
+    }
+}
