--- a/client/src/styles/cart.css
+++ b/client/src/styles/cart.css
@@ -19,8 +19,6 @@
 .cart-product {
     border-radius: 20px;
     display: flex;
-    /* border: 1px solid rgba(0, 0, 0, 1); */
-    /* border-bottom: 1px solid rgba(0, 0, 0, 1); */
     margin: 15px 0;
     height: 150px;
     display: flex;
@@ -112,4 +110,60 @@
 .subtotal h5 {
     cursor: pointer;
     font-size: 1.5rem;
+}
+
+@media (max-width: 915px) {
+    .cart-main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 30px 0 25px !important;
+    }
+
+    .shopping-cart {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .shopping-cart h3 {
+        width: fit-content;
+        margin-bottom: 5px;
+    }
+
+    .cart-product {
+        height: 40px;
+    }
+
+    .cart-product>a:first-child>img {
+        width: 80px;
+        display: none;
+    }
+
+    .cart-product>a:nth-child(2)>h4 {
+        width: 80px;
+        font-size: 1.2rem;
+    }
+
+    .cart-product h4 {
+        margin: 0 5px;
+        font-size: 1.2rem;
+    }
+
+    .inc-dec {
+        margin: 0 10px 0 0;
+    }
+
+    .subtotal {
+        margin: 10px 0 0;
+    }
+
+    .subtotal h3,
+    .subtotal h5 {
+        font-size: 1.4rem !important;
+        margin: 5px !important;
+    }
 }
