--- a/client/src/styles/headerFooter.css
+++ b/client/src/styles/headerFooter.css
@@ -266,8 +266,9 @@ nav h3 {
 
 @media (max-width: 915px) {
     #brand img {
-        height: 70px;
-        margin-right: 0px;
+        height: 50px;
+        margin-right: 15px;
+        margin-left: 15px;
     }
 
     #navbar ul {
@@ -290,4 +291,7 @@ nav h3 {
         height: 70px;
     }
 
+    nav h3 {
+        font-size: 1.3rem;
+    }
 }
