--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -415,4 +415,13 @@
     .form-profile fieldset button {
         margin: 20px auto !important;
     }
+
+    .alert-box-delete {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .alert-box-delete button {
+        margin: 4px;
+    }
 }
