--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -85,7 +85,7 @@
 
 .order {
    display: flex;
-   width: 100%;
+   width: 94%;
    margin: 15px 0;
 }
 
@@ -113,6 +113,7 @@
    cursor: pointer;
    border: 1px solid rgba(0, 0, 0, 0.6);
    background-color: white;
+   width: fit-content;
    margin: auto 15px;
    border-radius: 5px;
    padding: 9px 16px;
@@ -248,7 +249,7 @@
    margin: 10px 0;
    border: 1px solid rgba(0, 0, 0, 0.6);
    padding: 10px 15px;
-   width: 100%;
+   width: 93%;
    position: relative;
    border-radius: 5px;
 }
@@ -316,7 +317,7 @@
    cursor: pointer;
 }
 
-@media (max-height: 915px) {
+@media (max-width: 915px) {
    #profile {
       flex-direction: column;
       padding: 30px;
@@ -325,6 +326,10 @@
    #profile h3,
    #profile legend {
       font-size: 1.4rem;
+   }
+
+   #address {
+      width: 100%;
    }
 
    #addAddress h4 {
@@ -418,6 +423,75 @@
    .form-profile fieldset button {
       margin: 18px auto 5px !important;
    }
+
+   .alert-box-delete {
+      flex-direction: column;
+      width: 90%;
+   }
+
+   .alert-box-delete button {
+      margin: 4px;
+   }
+
+   #delete_account {
+      margin-top: 20px;
+   }
+}
+
+@media (max-width: 1600px) {
+   #innerProfile {
+      margin-right: 30px;
+   }
+
+   #inner-address {
+      flex-direction: column;
+      min-width: fit-content;
+      align-items: baseline;
+   }
+
+   #inner-address div :first-child {
+      display: none;
+   }
+
+   #address {
+      width: 100%;
+   }
+
+   #orders {
+      min-height: 250px;
+      margin: 30px 0 25px;
+   }
+
+   .order {
+      flex-direction: column;
+      width: 100%;
+      margin: 15px 0;
+      width: 100%;
+      height: fit-content;
+      background: rgba(253, 253, 253, 1);
+      padding: 10px 15px;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+      z-index: 3;
+   }
+
+   .order button {
+      cursor: pointer;
+      border: 1px solid rgba(0, 0, 0, 0.6);
+      background-color: white;
+      margin: 10px;
+      width: fit-content;
+      border-radius: 5px;
+      padding: 9px 16px;
+      font-size: 0.95rem;
+   }
+
+   .order div {
+      width: fit-content !important;
+      margin: 4px 0;
+   }
+
 
    .alert-box-delete {
       flex-direction: column;
